--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -10,3 +10,18 @@ user.active=Active
 user.registered=Registered
 meal.title=Meals
 common.select=Select
+meal.calories=Calories
+meal.date=Date
+meal.description=Description
+meal.fromDate=From Date
+meal.toDate=To Date
+meal.fromTime=From Time
+meal.toTime=To Time
+meal.filter=Filter
+meal.addMeal=Add meal
+meal.update=Update
+meal.delete=Delete
+meal.createMeal=Create Meal
+meal.dateTime=Date and Time
+meal.save=Save
+meal.cancel=Cancel
