--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -22,6 +22,8 @@ meal.addMeal=Add meal
 meal.update=Update
 meal.delete=Delete
 meal.createMeal=Create Meal
+meal.editMeal=Edit Meal
 meal.dateTime=Date and Time
 meal.save=Save
 meal.cancel=Cancel
+Create Meal
